--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
       </div>
       <div class="col-lg-6">
-        <img class="img-fluid" src="/imgs/hand2.png" alt="">
+        <img class="img-fluid" src="imgs/hand2.png" alt="">
       </div>
     </div>
   </section>
@@ -62,13 +62,13 @@
   <section class="container-fluid px-0">
     <div class="row align-items-center content">
       <div class="col-md-6 order-2 order-md-1">
-        <img src="/imgs/milk.png" alt="milk and donuts" class="img-fluid">
+        <img src="imgs/milk.png" alt="milk and donuts" class="img-fluid">
       </div>
       <div class="col-md-6 text-center order-1 order-md-2">
         <div class="row justify-content-center">
           <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
             <h2>MUSEUM OF CANDY</h2>
-            <img src="/imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
+            <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
             <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque, eveniet vitae eum cum quia
               impedit ea id soluta consequatur perspiciatis quos quae iste quod ullam, pariatur voluptas sequi, nesciunt
               dolorum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, eum eius veritatis doloremque
@@ -85,7 +85,7 @@
         <div class="row justify-content-center">
           <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
             <h2>MUSEUM OF CANDY</h2>
-            <img src="/imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
+            <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
             <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque, eveniet vitae eum cum quia
               impedit ea id soluta consequatur perspiciatis quos quae iste quod ullam, pariatur voluptas sequi, nesciunt
               dolorum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, eum eius veritatis doloremque
@@ -97,18 +97,18 @@
         </div>
       </div>
       <div class="col-md-6">
-        <img src="/imgs/gumball.png" alt="milk and donuts" class="img-fluid">
+        <img src="imgs/gumball.png" alt="milk and donuts" class="img-fluid">
       </div>
     </div>
     <div class="row align-items-center content">
       <div class="col-md-6 order-2 order-md-1">
-        <img src="/imgs/sprinkles.png" alt="milk and donuts" class="img-fluid">
+        <img src="imgs/sprinkles.png" alt="milk and donuts" class="img-fluid">
       </div>
       <div class="col-md-6 text-center order-1 order-md-2">
         <div class="row justify-content-center">
           <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
             <h2>MUSEUM OF CANDY</h2>
-            <img src="/imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
+            <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
             <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque, eveniet vitae eum cum quia
               impedit ea id soluta consequatur perspiciatis quos quae iste quod ullam, pariatur voluptas sequi, nesciunt
               dolorum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, eum eius veritatis doloremque
